# mode-io-skills

./: .env.example  .gitignore  LICENSE  Makefile  README.md  requirements.txt
modeio-middleware/: .clawhubignore  ARCHITECTURE.md  CONTRACT_AND_IMPLEMENTATION_PLAN.md  MANIFEST.in  MODEIO_PLUGIN_MANIFEST.schema.json  MODEIO_PLUGIN_MESSAGE.schema.json  MODEIO_PLUGIN_PROTOCOL.md  NOTICE  PROTOCOL_IMPLEMENTATION_PLAN.md  QUICKSTART.md  REFACTOR_GUIDE.md  SKILL.md  pyproject.toml
modeio-middleware/config/: default.json
modeio-middleware/config/presets/: guardrail.json
modeio-middleware/modeio_middleware/: __init__.py  http_transport.py  resources.py
modeio-middleware/modeio_middleware/cli/: __init__.py  gateway.py  new_plugin.py  plugin_conformance.py  setup.py  validate_plugin_manifest.py
modeio-middleware/modeio_middleware/connectors/: __init__.py  base.py  claude_hooks.py  openai_http.py
modeio-middleware/modeio_middleware/core/: __init__.py  config_resolver.py  context_extractor.py  contracts.py  (+11 more)
modeio-middleware/references/: standalone-product.md
modeio-middleware/scripts/: middleware_gateway.py  new_plugin.py  run_plugin_conformance.py  setup_middleware_gateway.py  smoke_agent_matrix.py  smoke_e2e.sh  upstream_tap_proxy.py  validate_plugin_manifest.py
modeio-middleware/tests/: README.md  test_claude_hook_connector.py  test_config_resolver.py  test_gateway_contract.py  test_guardrail_plugin_preset.py  test_http_transport.py  test_new_plugin_cli.py  test_packaging_resources.py  test_plugin_manager.py  test_profile_policy.py  test_protocol_example_plugin.py  test_protocol_manifest.py  test_protocol_registry.py  test_protocol_stdio_runtime.py  test_redact_utils.py  test_runtime_manager.py  test_setup_gateway.py  test_smoke_agent_matrix_support.py  test_smoke_opencode_flow.py  test_sse.py  test_stdio_supervisor.py  test_upstream_client.py
(+187 files in other folders)
