[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeio-middleware"
version = "0.1.0"
description = "Policy gateway middleware for OpenAI-shaped HTTP traffic and connector hooks."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "starlette>=0.37,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
modeio-middleware-gateway = "modeio_middleware.cli.gateway:main"
modeio-middleware-setup = "modeio_middleware.cli.setup:main"
modeio-middleware-new-plugin = "modeio_middleware.cli.new_plugin:main"
modeio-middleware-validate-plugin = "modeio_middleware.cli.validate_plugin_manifest:main"
modeio-middleware-plugin-conformance = "modeio_middleware.cli.plugin_conformance:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modeio_middleware*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
modeio_middleware = [
  "resources/config/*.json",
  "resources/plugins_external/example/*.json",
  "resources/plugins_external/example/*.py",
  "resources/plugins_external/example/*.md",
  "resources/protocol/*.json",
]
